package no.kommune.oslo.model

enum class AssetValueTypes {
    CONFIDENCIALITYVALUE, INTEGRITYVALUE, AVAILABILITYVALUE
}