package no.kommune.oslo.model

class RiskScenarioLibrary(val riskScenarios: List<RiskScenario>) {

}