package no.kommune.oslo.model

enum class RiskTreatmentStatus {
    EXISTING, PLANNED, IMPLEMENTED
}
