package no.kommune.oslo.model

enum class RiskTreatmentTypes {
    PROBABILITY_RISK_TREATMENT, CONSEQUENCE_RISK_TREATMENT
}