package no.kommune.oslo.model

enum class ThreatAgentType {
    HUMAN, ENVIRONMENTAL
}
