package no.kommune.oslo.model

enum class ThreatTypes {
    DELIBERATE, ACCIDENTAL, ENVIRONMENTAL
}