package no.kommune.oslo.model

import no.kommune.oslo.model.enums.SeverityLevel
import no.kommune.oslo.model.enums.VulnerabilityTypes

/**
 * Vulnerability has an initial score. But as long it is not exploited or exploitable by threats,
 * it can be considered as dormant. A dormant vulnerability does not necessary be remedied,
 * but needs to be monitored for changes.
 * The initial score is decreased by risk treatments, and otherwise increased by threats
 * able to exploit the vulnerability.
 * The algorithm to calculate exposed vulnerability score is injected to allow a calculation algorithm by choice.
 */
data class Vulnerability(
        val vulnerabilityType: VulnerabilityTypes,
        val vulnerabilityDescription: String,
        val vulnerabilityPotential: SeverityLevel
) : RiskItem {

    override fun getSeverityLevel(): SeverityLevel {
        return vulnerabilityPotential
    }
}
